adding instructions for making indexes